fixed api routes and singular responsibility

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=datawyse
-sonar.host.url=http://localhost:9000
-sonar.login=sqp_317585fe7763459999d276ff99ec8554049ca193
+sonar.projectKey=datawyse-auth-service
+sonar.host.url=http://192.0.0.2:9595
+sonar.token=sqp_396553b4efb4a18ebd88be9ebb0ae02a1024ea51
 
 # --- optional properties ---
 
